# eigen_lgsm

./: CMakeLists.txt  README.md  manifest.xml
include/eigen3/Eigen/: Lgsm
pkg-config/: eigen_lgsm.pc.in
