# Copyright (c) 2013 ISIR CNRS
# Authors: Sovannara Hak

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME eigen_lgsm)
SET(PROJECT_DESCRIPTION "Lgsm extension for Eigen3")
SET(PROJECT_URL "https://github.com/sovannara-hak/eigen_lgsm")

# Install include files
INSTALL(
    DIRECTORY ${CMAKE_SOURCE_DIR}/include/
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
    FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
    DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

# Configure pkg-config file
SET(
    LGSM_INCLUDE_INSTALL_DIR 
    ${CMAKE_INSTALL_PREFIX}/include/eigen_lgsm/unsupported
)
SET(
    EIGEN_INCLUDE_INSTALL_DIR 
    ${CMAKE_INSTALL_PREFIX}/include/eigen_lgsm
)

CONFIGURE_FILE(
    "${CMAKE_SOURCE_DIR}/pkg-config/eigen_lgsm.pc.in"
    "${CMAKE_CURRENT_BINARY_DIR}/eigen_lgsm.pc"
)

INSTALL(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/eigen_lgsm.pc"
    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/pkgconfig
    PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE
)


